* master *

* Add binary timestamp datatype handling. [Erik Bryn]

* 3.0.3

* Add TinyTDS/dblib connection mode. [Ken Collins]


* 3.0.2

* Fix DSN'less code. [Erik Bryn]


* 3.0.1

* Support DSN'less connections. Resolves ticket 38. 

* Support upcoming ruby odbc 0.99992


* 3.0.0

* Release rails 3 version!


* 2.3.8

* Properly quote all database names in rake helper methods. [Ken Collins]


* 2.3.7

* Correctly use :date/:time SQL types in 2008 [Ken Collins]


* 2.3.6

* Allow DNS's to not contain a database and use what is in database.yml [Marco Mastrodonato]

* Rake tasks methods for vanilla rails :db namespace parity. [Ken Collins]

* IronRuby integrated security fixes [Jimmy Schementi]


* 2.3.5

* Initial IronRuby ADONET connection mode support baked right in. Removed most &block 
  parameters, no handle/request object yielded anymore. Better abstraction and compliance 
  per the ActiveRecord abstract adapter to not yielding handles for #execute and only for 
  low level #select. Better wrapping of all queries at lowest level in #log so exceptions 
  at anytime can be handled correctly by core AR. Critical for System::Data's command 
  readers. Better abstraction for introspecting on #connection_mode. Added support for 
  running singular test cases via TextMate's Command-R. [Ken Collins]
  
* Force a binary encoding on values coming in and out of those columns for ruby 1.9.
  Fixes ticket #33 [Jeroen Zwartepoorte]

* Using change_column will leave default if the type does not change or a new default
  is not included. Fixes issue #22. [Ransom Briggs]

* Use correct SP name for sp_MSforeachtable so any collation can get to it. [7to3]

* Qualify INFORMATION_SCHEMA.COLUMNS with a correct period DB name if present.

* Allow adapter to return multiple results sets, for example from stored procedures. [Chris Hall]


* 2.3.4

* For tables that named with schema(ex. rails.users), they could not get length of column.