@@ -10,8 +10,8 @@ module ActiveRecord
           when String, ActiveSupport::Multibyte::Chars
             if column && column.type == :binary
               column.class.string_to_binary(value)
-            elsif quote_value_as_utf8?(value) || column && column.respond_to?(:is_utf8?) && column.is_utf8?
-              quoted_utf8_value(value)
+            elsif value.is_utf8? || (column && column.type == :string)
+              "N'#{quote_string(value)}'"
             else
               super
             end
@@ -47,14 +47,6 @@ module ActiveRecord
           else
             super
           end
-        end
-
-        def quoted_utf8_value(value)
-          "N'#{quote_string(value)}'"
-        end
-        
-        def quote_value_as_utf8?(value)
-          value.is_utf8? || enable_default_unicode_types
         end
         
       end
