@@ -95,10 +95,10 @@ module ActiveRecord
     class << self
       def connection_mode_dblib? ; ActiveRecord::Base.connection.instance_variable_get(:@connection_options)[:mode] == :dblib ; end
       def connection_mode_odbc? ; ActiveRecord::Base.connection.instance_variable_get(:@connection_options)[:mode] == :odbc ; end
+      def connection_mode_adonet? ; ActiveRecord::Base.connection.instance_variable_get(:@connection_options)[:mode] == :adonet ; end
       def sqlserver_2005? ; ActiveRecord::Base.connection.sqlserver_2005? ; end
       def sqlserver_2008? ; ActiveRecord::Base.connection.sqlserver_2008? ; end
       def ruby_19? ; RUBY_VERSION >= '1.9' ; end
-      def quote_values_as_utf8? ; ActiveRecord::Base.connection.quote_value_as_utf8?('') ; end
     end
     def assert_sql(*patterns_to_match)
       $queries_executed = []
@@ -112,10 +112,10 @@ module ActiveRecord
     end
     def connection_mode_dblib? ; self.class.connection_mode_dblib? ; end
     def connection_mode_odbc? ; self.class.connection_mode_odbc? ; end
+    def connection_mode_adonet? ; self.class.connection_mode_adonet? ; end
     def sqlserver_2005? ; self.class.sqlserver_2005? ; end
     def sqlserver_2008? ; self.class.sqlserver_2008? ; end
     def ruby_19? ; self.class.ruby_19? ; end
-    def quote_values_as_utf8? ; self.class.quote_values_as_utf8? ; end
     def with_enable_default_unicode_types?
       ActiveRecord::ConnectionAdapters::SQLServerAdapter.enable_default_unicode_types.is_a?(TrueClass)
     end
